{{ $NEXT }}

0.04      2010-06-23 14:12

    - re-released with correct requirements format in META.json, no other changes

0.03      2010-06-14 19:57

    - switched to Dist::Zilla for distribution management

0.02   .........

    [ENHANCEMENTS]
    
     
    
    [API CHANGES]

    -none-
    

    [BUG FIXES]
    
    - fixed bug, when thrown exception wasn't being propagated from nested statements 

0.01   .........

    Initial release