@@ -31,7 +31,7 @@ Class('JooseX.CPS.MethodModifier.Before', {
             
             var continued = function () {
                 
-                var cont = this.CONT || Joose.top.__GLOBAL_CNT__ || new JooseX.CPS.Continuation()
+                var cont = Joose.top.__GLOBAL_CNT__ || new JooseX.CPS.Continuation()
                 
                 return cont.TRY(function () {
                     
