@@ -15,7 +15,7 @@ Class('JooseX.CPS.MethodModifier.Override', {
             
             var continued = function () {
                 
-                var cont = this.CONT || Joose.top.__GLOBAL_CNT__ || new JooseX.CPS.Continuation()
+                var cont = Joose.top.__GLOBAL_CNT__ || new JooseX.CPS.Continuation()
                 
                 return cont.TRY(overriden, this, arguments)
             }
